--- a/src/app/css/setion1.module.css
+++ b/src/app/css/setion1.module.css
@@ -2,20 +2,83 @@ section.section1 {
   outline: none;
   min-height: min-content;
   background-color: #0475b5;
+  background-image: url(../../../public/images/plantwhite.png);
+  background-position: top var(--menu-mobile-height) left;
+  background-size: 10em;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-blend-mode: soft-light;
+
+  --logo-height: 9em;
+  --logo-width: 18em;
+
 }
 
+
+@media (min-width: 800px) { 
+  section.section1 {
+    background-position: top var(--menu-desktop-small-height) left;  
+  }
+
+  .layer1 {
+    aspect-ratio: 4 / 1;
+  }
+}
+/* 
 section.section1 h1 {
   font-size: 2em;
+} */
+/* 
+section.section1 h1 {
+  font-size: 2em;
+  position: relative;;
+} */
+
+/* section.section1 h2 {
+  font-size: 1.2em;
+} */
+
+
+section.section1 .titleGroup::after     
+{
+  position: absolute;
+  content: " ";
+  width: 8em;
+  height: 5.5em;
+  top: 3em;
+  background-size: contain;
+  background-repeat: no-repeat;
+  right: -5.5em;
+  transform: rotate(-240deg);
+  z-index: -1;
+  display: block;
+  opacity: 0.7;
+  background-image: url(../../../public/images/hojas8.png);
+
+  /* background-image: url(../../../public/images/hoja.svg); */
 }
 
-section.section1 h2 {
-  font-size: 1.2em;
+section.section1 .titleGroup::before     
+{
+  position: absolute;
+  content: " ";
+  width: 7em;
+  height: 7em;
+  top: 2em;
+  background-size: contain;
+  background-repeat: no-repeat;
+  left: -5em;
+  opacity: 0.7;
+  transform: scaleX(-1) rotate(131deg);
+  z-index: -1;
+  display: block;
+  background-image: url(../../../public/images/hojas10.png);
 }
 
 .totalScreenBackgroung {
 
   position: relative;
-  max-width: 800px;
+  /* max-width: 800px; */
   margin: 0 auto;
   /* min-height: 70vh; */
 }
@@ -24,10 +87,19 @@ section.section1 h2 {
 
 .titleGroup {
   color: white;
-  filter: drop-shadow(2px 4px 6px #222);
-  padding: 3em 4em 12em;
+  filter: drop-shadow(2px 4px 6px black);
+  padding: 3em 2em 12em;
+  height: var(--logo-height);
+  width: var(--logo-width);
+  margin: 0 auto;
   text-align: center;
   position: relative;
+}
+
+
+
+.titleGroup h1, .titleGroup h2 {
+  filter: drop-shadow(2px 4px 6px #222);
 }
 
 .layerBackGround {
@@ -37,29 +109,29 @@ section.section1 h2 {
   content: " ";
   top: 0;
   left: 0;
-  background-color: #0475b5;
   z-index: 1;
 }
 
 .layer1 {
   z-index: 2;
   position: relative;
-  padding-bottom: 9em;
+  padding-bottom: 10em;
 }
 
 .comunity {
   display: block;
+  margin: 0 auto;
   width: 100%;
+    /* max-width: 800px; */
   height: 100%;
   margin-bottom: 15px;
-  position: absolute;
   bottom: 0;
   left: 0;
   background-repeat: no-repeat;
   background-position: bottom center;
   background-size: 80% auto;
   filter: drop-shadow(2px 4px 6px #222);
-  background-image: url(../../../public/images/comuni.png);
+  background-image: url(../../../public/images/comuni3.png);
 }
 
 .comunity::after {
@@ -67,10 +139,10 @@ section.section1 h2 {
   width: 100%;
   height: 100%;
   content: " ";
-  position: absolute;
+  /* position: absolute;
   bottom: 0;
   left: 0;
-  transform: translateY(-6.5em);
+  transform: translateY(-6.5em); */
   background-repeat: no-repeat;
   background-position: bottom center;
   background-size: 80% auto;
@@ -151,15 +223,34 @@ a.email {
 }
 
 .logo {
-  position: absolute;
+  position: relative;
   background-image: url(../../../public/images/logo-FTM.svg);
-  height: 9em;
-  width: 18em;
+  height: var(--logo-height);
+  width: var(--logo-width);
+
   background-repeat: no-repeat;
   background-size: contain;
-  bottom: 1.5em;
   left: 50%;
   transform: translateX(-50%);
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: var(--body-background-color);
   border-radius: 2em;
+}
+
+
+
+.logo::after     
+{
+  position: absolute;
+    content: " ";
+    width: 3em;
+    height: 3em;
+    top: -1em;
+    background-size: contain;
+    background-repeat: no-repeat;
+    right: -1em;
+    transform: rotate(-240deg);
+    z-index: 1;
+    display: block;
+
+  background-image: url(../../../public/images/hoja.png);
 }
