--- a/src/app/css/setionFinancingInstruments.module.css
+++ b/src/app/css/setionFinancingInstruments.module.css
@@ -4,13 +4,12 @@ section.sectionFinancingInstruments {
   background-color: #a8ce65;
   text-align: center;
 
-  color: white;
 
   background-image: url(../../../public/images/backgreen.png);
 
 }
 
-section.section6 h2{
+section.sectionFinancingInstruments h2{
   padding: 1.5em;
 }
 /* 
@@ -35,20 +34,25 @@ section.section6 p{
   display: flex;
   flex-direction: row;
   width: 100%;
-  justify-content: space-between;
-  padding-top: 8em;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  margin: 0 auto;
 }
 
 .financingInstruments li {
   position: relative;
   text-align: center;
+  margin-top: 9em;
+  flex-basis: 13em;
+  max-width: 13em;
 
 }
 
 .financingInstruments li::after {
   position: absolute;
-  width: 5em;
-  height: 5em;
+  width: 7em;
+    height: 7em;
+    filter: drop-shadow(2px 4px 6px #333);
   top: -0.2em;
   background-size: contain;
   background-repeat: no-repeat;
@@ -72,4 +76,45 @@ section.section6 p{
 
 .financingInstruments li:nth-child(3):after {
   background-image: url(../../../public/images/finan_clock.png);
+}
+
+
+
+
+.wave {
+  display: block;
+  position: relative;
+  min-height: 40px;
+  width: 100%;
+  /* background: #0475b5; */
+  background-image: url(../../../public/images/backgreen.png);
+  transform: scale(1, 1);
+  margin-bottom: 40px;
+}
+
+.wave:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  border-radius: 100%;
+  width: 100%;
+  height: 300px;
+  background-color: #fcf9ee;
+  right: -25%;
+  top: 20px;
+
+}
+
+.wave:after {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 100%;
+  width: 100%;
+  height: 300px;
+  /* background-color: #0475b5; */
+  background-image: url(../../../public/images/backgreen.png);
+  left: -25%;
+  top: -240px;
+  clip-path: ellipse(100% 15% at -15% 100%);
 }
