--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,8 +44,11 @@
   --menu-desktop-small-height: 72px;
 
   --olive-green: #d1e28d;
-  --olive-background-green: #cbe3bd;
+  --olive-background-green: #d2e4cb;
   --olive-background-green2: #93c23dff;
+
+  --background-green1: #8bc53f;
+  --background-orange1:#f7941c;
 
   
   --greenToBlue1: #7ecb29;
