--- a/src/app/css/setionAMPBMembers.module.css
+++ b/src/app/css/setionAMPBMembers.module.css
@@ -1,21 +1,35 @@
 section.section3 {
   outline: none;
   min-height: min-content;
-  background-color: #0475b5;
   text-align: center;
-
   color: white;
 
+  background-blend-mode: multiply;
+  background-image: url(../../../public/images/carton2.png);
 }
 
-section.section3 h2{
-  padding: 1.5em;
+section.section3 h2 {
+  padding: 0.5em 1em;
+  position: absolute;
+  font-size: 0.8em;
+  background-color: #26326f;
+  border-radius: 2em;
+  padding: 0.5em 1em;
+  position: absolute;
+  background-color: #26326f;
+  border-radius: 3em;
+  top: 4%;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
-section.section3 p{
+section.section3 p {
   margin-left: 50%;
-  font-size: 0.75em;
+  font-size: 0.6em;
   padding: 0 1em;
+  position: absolute;
+  right: 0;
+  top: 20%
 }
 
 .totalScreenBackgroung {
@@ -23,9 +37,250 @@ section.section3 p{
   position: relative;
   margin: 0 auto;
   /* min-height: 70vh; */
-  max-width: 800px;
-  min-height: 338px;
+  max-width: 1000px;
+  /* min-height: 300px; */
   margin: 0 auto;
+  aspect-ratio: 16/9;
   background-size: contain;
+  background-repeat: no-repeat;
   background-image: url(../../../public/images/map.png);
+}
+
+
+.personitas {
+  position: absolute;
+  width: 2.5%;
+  top: 27%;
+  left: 18%;
+
+  background-size: contain;
+  background-repeat: no-repeat;
+  aspect-ratio: 1/2;
+
+  background-image: url(../../../public/images/personita1.png);
+}
+
+.personitas.personitas2 {
+  top: 30%;
+  left: 21%;
+  background-image: url(../../../public/images/personita2.png);
+}
+
+.personitas.personitas3 {
+  top: 35%;
+  left: 28%;
+  background-image: url(../../../public/images/personita3.png);
+}
+
+.personitas.personitas4 {
+  top: 48%;
+  left: 23%;
+  background-image: url(../../../public/images/personita4.png);
+}
+
+.personitas.personitas5 {
+  top: 44%;
+  left: 43%;
+  background-image: url(../../../public/images/personita5.png);
+}
+
+.personitas.personitas6 {
+  top: 53%;
+  left: 37%;
+  background-image: url(../../../public/images/personita6.png);
+}
+
+.personitas.personitas7 {
+  top: 57%;
+  left: 44%;
+  background-image: url(../../../public/images/personita7.png);
+}
+
+.personitas.personitas8 {
+  top: 59%;
+  left: 49%;
+  background-image: url(../../../public/images/personita8.png);
+}
+
+.personitas.personitas9 {
+  top: 69%;
+  left: 47%;
+  background-image: url(../../../public/images/personita9.png);
+}
+
+.personitas.personitas10 {
+  top: 74%;
+  left: 52%;
+  background-image: url(../../../public/images/personita10.png);
+}
+
+
+.orgs {
+  position: absolute;
+  top: 27%;
+  left: 18%;
+  font-size: 14px;
+}
+
+.orgs:after,
+.orgs:before {
+  position: absolute;
+  content: " ";
+
+}
+
+.org1 {
+  top: 40%;
+  left: 9%;
+  max-width: 5em;
+  transform: translateX(-50%);
+  color: var(--blueOrg4);
+}
+
+.org2 {
+  top: 59%;
+  left: 21%;
+  max-width: 5em;
+  transform: translateX(-50%);
+  color: var(--blueOrg4);
+}
+
+.org3 {
+  top: 78%;
+  left: 35%;
+  white-space: nowrap;
+  transform: translateX(-50%);
+  color: var(--blueOrg4);
+}
+
+.org4 {
+  top: 82%;
+  left: 35%;
+  white-space: nowrap;
+
+  transform: translateX(-50%);
+  color: var(--blueOrg4);
+}
+
+.org5 {
+  top: 61%;
+  left: 57%;
+  white-space: nowrap;
+
+  transform: translateX(-50%);
+  color: var(--blueOrg4);
+}
+
+.org6 {
+  top: 67%;
+  left: 57%;
+  white-space: nowrap;
+
+  transform: translateX(-50%);
+  color: var(--blueOrg4);
+}
+
+.org7 {
+  top: 46%;
+  left: 49%;
+  white-space: nowrap;
+
+  transform: translateX(-50%);
+  color: var(--blueOrg4);
+}
+
+.org8 {
+  top: 52%;
+  left: 49%;
+  white-space: nowrap;
+
+  transform: translateX(-50%);
+  color: var(--blueOrg4);
+}
+
+
+@media (min-width: 800px) {
+  .org8::after {
+    top: 110%;
+    right: 90%;
+    width: 2px;
+    height: 350%;
+    background-color: var(--blueOrg4);
+
+    transform-origin: right;
+  }
+
+  .org7::after {
+    top: 110%;
+    right: 90%;
+    width: 2px;
+    height: 500%;
+    background-color: var(--blueOrg4);
+
+    transform-origin: right;
+  }
+
+  .org6::after {
+    top: 50%;
+    right: 105%;
+    width: 150%;
+    height: 2px;
+    background-color: var(--blueOrg4);
+    transform: rotate(-45deg);
+    transform-origin: right;
+  }
+
+
+  .org5::after {
+    top: 50%;
+    right: 105%;
+    width: 65%;
+    height: 2px;
+    background-color: var(--blueOrg4);
+    transform: rotate(-45deg);
+    transform-origin: right;
+  }
+
+  .org4::after {
+    top: 50%;
+    left: 105%;
+    width: 54%;
+    height: 2px;
+
+    background-color: var(--blueOrg4);
+  }
+
+  .org3::after {
+    top: 50%;
+    left: 105%;
+    width: 54%;
+    height: 2px;
+
+    background-color: var(--blueOrg4);
+  }
+
+  .org2::after {
+    top: 50%;
+    left: 105%;
+    width: 222%;
+    height: 2px;
+    background-color: var(--blueOrg4);
+  }
+  .org1::after {
+    top: 50%;
+    left: 105%;
+    width: 120%;
+    height: 2px;
+    background-color: var(--blueOrg4);
+  }
+
+  section.section3 p {
+    font-size: 0.75em;
+   
+  }
+
+
+section.section3 h2 {
+  font-size: 0.9em;
+}
 }
