--- a/src/app/css/setionFinancingInstruments.module.css
+++ b/src/app/css/setionFinancingInstruments.module.css
@@ -2,12 +2,13 @@ section.sectionFinancingInstruments {
   outline: none;
   min-height: min-content;
   text-align: center;
-  background-image: url(../../../public/images/backgreen.png), url(../../../public/images/plantwhite.png);
+  background-image: url(../../../public/images/backgreen.png), url(../../../public/images/plantwhite.png), url(../../../public/images/steps.png);
   /* background-image: url(../../../public/images/plantwhite.png); */
-  background-size: auto, 12em;
-  background-repeat: repeat, no-repeat;
-  background-attachment: local, fixed;
+  background-size: auto, 12em, 12em ;
+  background-repeat: repeat, no-repeat, no-repeat;
+  background-attachment: local, fixed, local;
   background-blend-mode: soft-light;
+  background-position: center, top left , top 2em right 2em;
 
 }
 
@@ -104,9 +105,6 @@ section.section6 p{
   background-color: #fcf9ee;
   right: -25%;
   top: 20px;
-
-
-
 }
 
 .wave:after {
