--- a/src/app/css/setionRational.module.css
+++ b/src/app/css/setionRational.module.css
@@ -2,13 +2,11 @@ section.section4 {
   outline: none;
   min-height: min-content;
   text-align: center;
-
-  background-color: #0475b5;
-
+  background-image: url(../../../public/images/carton2.png);
 }
 
 section.section4 h2 {
-  padding: 1.5em;
+  padding: 1.5em 0 0;
   color: white;
 }
 
@@ -16,27 +14,32 @@ section.section4 h2 {
 
   position: relative;
   margin: 0 auto;
-  /* min-height: 70vh; */
   max-width: 600px;
-  min-height: 338px;
   margin: 0 auto;
   background-size: contain;
 }
 
 .card_top {
-  min-height: 400px;
   position: relative;
 }
 
 .tucan_card {
   background-image: url(../../../public/images/backtucan.png);
-  min-height: 400px;
+  width: fit-content;
+    aspect-ratio: 1146/781;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  padding: 4% 6%;
+  padding: 4% 6% 20%;
   position: relative;
+  font-size: 17px;
   z-index: 3;
+}
+
+.tucan_card .scrollArea {
+  
+  overflow: scroll;
+  height: 100%;
 }
 
 .tucan_card p {
@@ -50,10 +53,10 @@ section.section4 h2 {
 .tucan_card::before {
   content: " ";
   position: absolute;
-  height: 40%;
+  height: 5.5em;
   width: 5em;
   display: block;
-  top: 25%;
+  top: 6em;
   left: 0;
   transform: translate(-15%, 0);
   background-repeat: no-repeat;
@@ -66,8 +69,8 @@ section.section4 h2 {
 .card_top::after {
   content: " ";
   position: absolute;
-  height: 75%;
-  width: 14em;
+  width: 40%;
+  aspect-ratio: 74/103;
   display: block;
   top: 50%;
   right: 0;
@@ -95,4 +98,45 @@ section.section4 h2 {
   background-image: url(../../../public/images/hojas4.png);
   background-size: contain;
   z-index: 1;
+}
+
+
+
+.wave {
+  display: block;
+  position: relative;
+  min-height: 40px;
+  width: 100%;
+  background-image: url(../../../public/images/carton2.png);
+  transform: scale(1, 1);
+}
+
+.wave:before {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 100%;
+  width: 100%;
+  height: 300px;
+  background-color: #fcf9ee;
+  right: -25%;
+  top: 20px;
+
+  background-repeat: no-repeat;
+  background-position: right top;
+  background-size: cover;
+}
+
+.wave:after {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 100%;
+  width: 100%;
+  height: 300px;
+  
+  background-image: url(../../../public/images/carton2.png);
+  left: -25%;
+  top: -240px;
+  clip-path: ellipse(100% 15% at -15% 100%);
 }
