--- a/src/app/css/setionRational.module.css
+++ b/src/app/css/setionRational.module.css
@@ -30,9 +30,9 @@ section.section4 h2 {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  padding: 4% 6% 20%;
+  padding: 1.5em 1em 5em;
   position: relative;
-  font-size: 17px;
+  font-size: 15px;
   z-index: 3;
 }
 
