--- a/src/app/css/setionRational.module.css
+++ b/src/app/css/setionRational.module.css
@@ -27,7 +27,7 @@ section.section4 h2 {
   background-image: url(../../../public/images/backtucan.png);
   width: fit-content;
     aspect-ratio: 1146/781;
-  background-size: contain;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   padding: 1.5em 1em 5em;
